helm/superset/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: superset-tls-ingress-route
  namespace: esg-demo-platform-own
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`esg-cluster.labtastic.local`)
      middlewares:
        - name: traefik-cors
          namespace: default
        - name: headers
          namespace: default
      services:
        - kind: Service
          name: test-superset
          namespace: esg-demo-platform-own
          port: 8088
  tls:
    certResolver: myresolver
